--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next -p 5000",
+        "dev": "next dev",
         "build": "next build",
-        "start": "next start -p 3000"
+        "start": "next start -H 0.0.0.0 -p $PORT",
+        "start:dev": "next start",
+        "start:prod": "next start -p 80",
+        "export": "next build && next export"
     },
     "dependencies": {
         "@material-ui/core": "^4.11.0",
